Address lint issue