@@ -10,6 +10,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
@@ -143,7 +144,7 @@ final class GcpMetadataConfig {
   @Nullable
   private String fetchAttribute(String attributeName) {
     try {
-      URL url = new URL(this.url + attributeName);
+      URL url = URI.create(this.url + attributeName).toURL();
       HttpURLConnection connection = (HttpURLConnection) url.openConnection();
       connection.setRequestProperty("Metadata-Flavor", "Google");
       if (connection.getResponseCode() == 200
